# motion_simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clean.sh  cmake_install.cmake  dump.txt  run.sh
headers/: canon.hpp  main.hpp  physics.hpp
includes/: canon.hpp  physics.hpp
src/: canon.cpp  main.cpp
